# Universal-Uno

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  client.c  client.h  controller.c  controller.h  model.c  model.h  model2.c  model2.h  run_client.c  run_server.c  server.c  server.h  test.c  utils.c  view.c  view.h
test/: CMakeLists.txt  test_controller.c  test_model.c  test_server.c  test_utils.c  test_view.c
